@@ -157,7 +157,20 @@ public class DiffMLGraphicalVerbalizerNew {
         HashSet<Operation> usedHides = new HashSet<>();
 
         // Maximal matches
-        HashSet<State> leaves = getAllLeaves();
+        TreeSet<State> leaves = new TreeSet<>(new Comparator<State>() {
+            @Override
+            public int compare(State o1, State o2) {
+                if(o1.cost != o2.cost)
+                    return o1.cost - o2.cost;
+                else if(o1.c1.cardinality() != o2.c1.cardinality())
+                    return o2.c1.cardinality() - o1.c1.cardinality();
+                else if(o1.c2.size() != o2.c2.size())
+                    return o2.c2.size() - o1.c2.size();
+
+                return 1;
+            }
+        });
+        leaves.addAll(getAllLeaves());
 
         // Traverse the optimal matches captured in the PSP,
         // one maximal match at a time
@@ -180,7 +193,7 @@ public class DiffMLGraphicalVerbalizerNew {
             }
 
             filterOutSilent(lhide);
-            filterOutSilent(lhide);
+            filterOutSilent(rhide);
             filterOutSilent(allHides);
 
             filterCausalConcMismatches(lhide, rhide, path2Leaf);
@@ -488,6 +501,7 @@ public class DiffMLGraphicalVerbalizerNew {
         // Verbalize remaining acyclic behavior
         verbalizeAdditionalAcyclicModelBehavior(acyclicIntervals.entries());
 
+        System.out.println(toDot());
     }
 
     private DifferenceML getTASKABSMDiff(Operation op, BitSet historyEvt, HashSet<String> extList) {
@@ -554,9 +568,18 @@ public class DiffMLGraphicalVerbalizerNew {
         List<String> newTasks = new LinkedList<>();
         newTasks.add(op.label);
 
+        LinkedList<Operation> path = getPath(op.nextState);
+        int indexPath = path.size() - 2;
+        Operation endState = path.get(indexPath);
+        while(isLHide(endState) && indexPath >= 0)
+            endState = path.get(--indexPath);
+
+        Integer event = isMatch(endState) ? ((Pair<Integer,Integer>) endState.target).getSecond() : (Integer)endState.target;
+
         LinkedList<Integer> historyEvts = new LinkedList<>();
-        for(Integer evt : op.nextState.c2.elementSet())
-            historyEvts.add(evt);
+        BitSet bs = pes2.getLocalConfiguration(event);
+        for (int i = bs.nextSetBit(0); i >= 0; i = bs.nextSetBit(i+1))
+            historyEvts.add(i);
 
         Collections.sort(historyEvts, new Comparator<Integer>() {
             @Override
@@ -566,9 +589,11 @@ public class DiffMLGraphicalVerbalizerNew {
         });
 
         FlowNode task = model.getEnd();
-        for(int i = 0; i < historyEvts.size(); i++){
-            if(model.getTaskFromEvent(historyEvts.get(i)) != null){
-                task = model.getTaskFromEvent(historyEvts.get(i));
+        Iterator<Integer> it = historyEvts.iterator();
+        while(it.hasNext()){
+            Integer next = it.next();
+            if(model.getTaskFromEvent(next) != null){
+                task = model.getTaskFromEvent(next);
                 break;
             }
         }
@@ -667,7 +692,7 @@ public class DiffMLGraphicalVerbalizerNew {
         difference.setGreys(greys);
         difference.setEnd(end);
         difference.setSentence(sentence);
-        difference.setType("TASKINS");
+        difference.setType("TASKABSLog");
 
 //        printDiff(start, end, greys, a);
 
@@ -675,6 +700,20 @@ public class DiffMLGraphicalVerbalizerNew {
     }
 
     private DifferenceML getTASKSUBDiff(LinkedList<Operation> path2Leaf, LinkedList<Operation> source, LinkedList<Operation> target) {
+        LinkedList<Operation> prunedSource = new LinkedList<>();
+        LinkedList<Operation> prunedTarget = new LinkedList<>();
+
+        for(Operation op: source)
+            if(commonLabels.contains(op.label))
+                prunedSource.add(op);
+
+        for(Operation op: target)
+            if(commonLabels.contains(op.label))
+                prunedTarget.add(op);
+
+        if(prunedSource.isEmpty() || prunedTarget.isEmpty())
+            return null;
+
         int i = Math.min(path2Leaf.indexOf(source.get(0)), path2Leaf.indexOf(target.get(0))) - 1;
 
         float impact = 1;
@@ -682,16 +721,17 @@ public class DiffMLGraphicalVerbalizerNew {
         LinkedList<Operation> rHidesOps;
         LinkedList<String> newTasks = new LinkedList<>();
 
-        if(source.getFirst().op.equals(Op.RHIDE)) {
-            impact = computeImpact(getMinimum(target));
-            rHidesOps = source;
+        if(prunedSource.getFirst().op.equals(Op.RHIDE)) {
+            impact = computeImpact(getMinimum(prunedTarget));
+            rHidesOps = prunedSource;
         }else {
-            impact = computeImpact(getMinimum(source));
-            rHidesOps = target;
+            impact = computeImpact(getMinimum(prunedSource));
+            rHidesOps = prunedTarget;
         }
 
-        if (path2Leaf.indexOf(source.get(0)) < path2Leaf.indexOf(target.get(0)))
-            sentence = verbalizeTaskSub("log", path2Leaf.get(i).label, source, target);
+//        if (path2Leaf.indexOf(source.get(0)) < path2Leaf.indexOf(target.get(0)))
+        if(isRHide(source.getFirst()))
+            sentence = verbalizeTaskSub("model", path2Leaf.get(i).label, source, target);
         else
             sentence = verbalizeTaskSub("model", path2Leaf.get(i).label, target, source);
 
@@ -746,16 +786,34 @@ public class DiffMLGraphicalVerbalizerNew {
         return difference;
     }
 
+    public boolean containsIntervalLabel(LinkedList<Operation> interval, String label){
+        for(Operation op : interval)
+            if(op.label.equals(label))
+                return  true;
+
+        return false;
+    }
+
     private DifferenceML getUNMRepetitionDiff2(Pair<List<Operation>, LinkedList<Operation>> pairMatches, LinkedList<Operation> path2Leaf, int i, LinkedList<Operation> hides) {
         float impact = computeImpact(getMinimum(pairMatches.getSecond()));
+        int index = path2Leaf.indexOf(hides.getFirst())-1;
+        Operation context = path2Leaf.get(index);
+        while(!commonLabels.contains(context.label) && index >= 0)
+            context = path2Leaf.get(--index);
+
+        if(index < 0)
+            context = path2Leaf.get(0);
+
+        boolean isUNMRep = true;
+
+        if((isRHide(context) || isMatch(context)) && !containsIntervalLabel(hides,context.label))
+            return getDuplicationDiff(pairMatches, path2Leaf, i, hides, impact, context);
 
         String sentence = verbalizeUnmRep("log", path2Leaf.get(i).label, hides);
-        System.out.println(sentence + " -- Impact = " + impact);
-
         HashSet<Integer> ids = new HashSet<>();
         for(Operation op : pairMatches.getFirst())
-        if(commonLabels.contains(pes2.getLabel(((Pair<Integer,Integer>)op.target).getSecond())))
-            ids.add(((Pair<Integer,Integer>)op.target).getSecond());
+            if(commonLabels.contains(pes2.getLabel(((Pair<Integer,Integer>)op.target).getSecond())))
+                ids.add(((Pair<Integer,Integer>)op.target).getSecond());
 
         if(ids.isEmpty())
             return null;
@@ -806,6 +864,60 @@ public class DiffMLGraphicalVerbalizerNew {
         difference.setA(a);
         difference.setEnd(end);
         difference.setType("UNMREPETITION2");
+
+        // DEBUG
+//        printDiff(start, end, new LinkedList<String>(), a);
+
+        return difference;
+    }
+
+    private DifferenceML getDuplicationDiff(Pair<List<Operation>, LinkedList<Operation>> pairMatches, LinkedList<Operation> path2Leaf, int i, LinkedList<Operation> hides, float impact, Operation context) {
+        String sentence = verbalizeUnmRep("log", context.label, hides);
+        HashSet<Integer> ids = new HashSet<>();
+        for(Operation op : pairMatches.getFirst())
+            if(commonLabels.contains(pes2.getLabel(((Pair<Integer,Integer>)op.target).getSecond())))
+                ids.add(((Pair<Integer,Integer>)op.target).getSecond());
+
+        if(ids.isEmpty())
+            return null;
+
+        LinkedList<Integer> idSort = new LinkedList<>(ids);
+
+        Collections.sort(idSort, new Comparator<Integer>() {
+            @Override
+            public int compare(Integer o1, Integer o2) {
+                return pes2.getLocalConfiguration(o1).cardinality() - pes2.getLocalConfiguration(o2).cardinality();
+            }
+        });
+
+        List<String> newTasks = new ArrayList<>();
+        for(Integer gObj: idSort)
+            newTasks.add(pes2.getLabel(gObj));
+
+        List<String> start = new LinkedList<>();
+        FlowNode startNode = null;
+        if(isMatch(context))
+            startNode = model.getTaskFromEvent(((Pair<Integer, Integer>)context.target).getSecond());
+        else
+            startNode = model.getTaskFromEvent((Integer)context.target);
+        start.add(startNode.getId());
+
+
+        List<String> end = new LinkedList<>();
+        FlowNode endNode = model.getBpmnModel().getDirectSuccessors(startNode).iterator().next();
+        end.add(endNode.getId());
+
+        List<String> greys = new LinkedList<>();
+        greys.add(model.getBpmnModel().getDirectedEdge(startNode, endNode).getId());
+
+        DifferenceML difference = new DifferenceML(impact);
+        difference.setSentence(sentence);
+
+        difference.setStart(start);
+        difference.setGreys(greys);
+        difference.setNewTasks(newTasks);
+        difference.setEnd(end);
+        difference.setType("UNMREPETITIONINTERVAL");
 
         // DEBUG
 //        printDiff(start, end, new LinkedList<String>(), a);
@@ -1063,10 +1175,16 @@ public class DiffMLGraphicalVerbalizerNew {
             }
 
         List<String> start = new LinkedList<>();
-        start.add(model.getBpmnModel().getDirectPredecessors(xorGSp).iterator().next().getId());
+        if(xorGSp != null)
+            start.add(model.getBpmnModel().getDirectPredecessors(xorGSp).iterator().next().getId());
+        else
+            start.add(model.getBpmnModel().getDirectPredecessors(firstEl).iterator().next().getId());
 
         List<String> end = new LinkedList<>();
-        end.add(model.getBpmnModel().getDirectSuccessors(xorGJn).iterator().next().getId());
+        if(xorGJn!=null)
+            end.add(model.getBpmnModel().getDirectSuccessors(xorGJn).iterator().next().getId());
+        else
+            end.add(model.getBpmnModel().getDirectSuccessors(lastEl).iterator().next().getId());
 
         DifferenceML difference = new DifferenceML(impact);
         difference.setSentence(sentence);
@@ -1269,7 +1387,7 @@ public class DiffMLGraphicalVerbalizerNew {
             greys.add(gObj.getId());
 
         LinkedList<Operation> predOps = getPredOps(commonSubL.getFirst().getFirst(), path2Leaf, "model");
-        Integer event = predOps.getLast().op.equals(Op.MATCH) ?
+        Integer event = isMatch(predOps.getLast())?
                 ((Pair<Integer, Integer>)predOps.getLast().target).getSecond() :
                 (Integer) predOps.getLast().target;
 
@@ -1751,7 +1869,7 @@ public class DiffMLGraphicalVerbalizerNew {
         for (String s : greys)
             newColorsBP.put(s, "gray");
 
-        printModels("m", "1", net, model.getReader(), null, newColorsBP, new HashMap<String, Integer>(), new HashMap<String, Integer>());
+//        printModels("m", "1", net, model.getReader(), null, newColorsBP, new HashMap<String, Integer>(), new HashMap<String, Integer>());
 
 
         return difference;
@@ -1853,7 +1971,7 @@ public class DiffMLGraphicalVerbalizerNew {
         for (String s : greys)
             newColorsBP.put(s, "gray");
 
-        printModels("m", "1", net, model.getReader(), null, newColorsBP, new HashMap<String, Integer>(), new HashMap<String, Integer>());
+//        printModels("m", "1", net, model.getReader(), null, newColorsBP, new HashMap<String, Integer>(), new HashMap<String, Integer>());
 
         return difference;
     }
@@ -1984,7 +2102,7 @@ public class DiffMLGraphicalVerbalizerNew {
         for (String s : greys)
             newColorsBP.put(s, "gray");
 
-        printModels("m", "1", net, model.getReader(), null, newColorsBP, new HashMap<String, Integer>(), new HashMap<String, Integer>());
+//        printModels("m", "1", net, model.getReader(), null, newColorsBP, new HashMap<String, Integer>(), new HashMap<String, Integer>());
 
         return difference;
     }
@@ -2160,13 +2278,16 @@ public class DiffMLGraphicalVerbalizerNew {
             type = "CAUSCONC2";
         }else {
             // Priority No. 10 -- CAUSCONC
-            Integer first = evt1L;
-            Integer second = evt2L;
-            if(pes1.getBRelation(first, second).equals(BehaviorRelation.INV_CAUSALITY)){
-                first = (Integer) evt2L;
-                second = evt1L;
+            if(pes1.getBRelation(evt1L, evt2L).equals(BehaviorRelation.INV_CAUSALITY)){
+                Integer evtBk = evt1L;
+                evt1L = (Integer) evt2L;
+                evt2L = evtBk;
+
+                evtBk = evt1M;
+                evt1M = evt2M;
+                evt2M = evtBk;
             }
-            sentence = verbalizeCausConc("log", "model", context, pes1.getLabel(first), pes1.getLabel(second));
+            sentence = verbalizeCausConc("log", "model", context, pes1.getLabel(evt1L), pes1.getLabel(evt2L));
             type = "CAUSCONC1";
         }
 
@@ -2184,11 +2305,14 @@ public class DiffMLGraphicalVerbalizerNew {
             if(obj instanceof ControlFlow)
                 greys.add(obj.getId());
 
+        FlowNode taskA = model.getTaskFromEvent(evt1M);
+        FlowNode taskB = model.getTaskFromEvent(evt2M);
+
         FlowNode firstEl = getPredEvt(evt1M, evt2M);
-        FlowNode lastEl = getSuccEvt(evt1M, evt2M);
+        FlowNode lastEl = model.getBpmnModel().getDirectSuccessors(taskB).iterator().next();//getSuccEvt(evt1M, evt2M);
 
         if(type.equals("CAUSCONC1")){
-            if(firstEl instanceof AndGateway) {
+            if(firstEl instanceof AndGateway){// && isSafe2RemSp(firstEl, taskA, taskB)) {
                 greys.add(firstEl.getId());
 
                 for(ControlFlow contF : model.getBpmnModel().getIncomingControlFlow(firstEl))
@@ -2200,11 +2324,9 @@ public class DiffMLGraphicalVerbalizerNew {
                         greys.add(contF.getId());
 
                 firstEl = model.getBpmnModel().getDirectPredecessors(firstEl).iterator().next();
-
-
             }
 
-            if(lastEl instanceof AndGateway) {
+            if(lastEl instanceof AndGateway){// && isSafe2RemJn(lastEl, taskA, taskB)) {
                 greys.add(lastEl.getId());
 
                 for(ControlFlow contF : model.getBpmnModel().getIncomingControlFlow(lastEl))
@@ -2221,8 +2343,14 @@ public class DiffMLGraphicalVerbalizerNew {
 
         start.add(firstEl.getId());
         end.add(lastEl.getId());
-        a.add(model.getTaskFromEvent(evt1M).getId());
-        b.add(model.getTaskFromEvent(evt2M).getId());
+
+//        if(type.equals("CAUSCONC1") && pes1.getBRelation(evt1L, evt2L).equals(BehaviorRelation.INV_CAUSALITY)){
+//            b.add(model.getTaskFromEvent(evt1M).getId());
+//            a.add(model.getTaskFromEvent(evt2M).getId());
+//        }else{
+            a.add(taskA.getId());
+            b.add(taskB.getId());
+//        }
 
         DifferenceML difference = new DifferenceML(impact);
         difference.setA(a);
@@ -2250,10 +2378,18 @@ public class DiffMLGraphicalVerbalizerNew {
         for (String s : greys)
             newColorsBP.put(s, "gray");
 
-        printModels("m", "1", net, model.getReader(), null, newColorsBP, new HashMap<String, Integer>(), new HashMap<String, Integer>());
+//        printModels("m", "1", net, model.getReader(), null, newColorsBP, new HashMap<String, Integer>(), new HashMap<String, Integer>());
 
 
         return difference;
+    }
+
+    private boolean isSafe2RemSp(FlowNode firstEl, FlowNode taskA, FlowNode taskB) {
+        return (model.getBpmnModel().getDirectedEdge(firstEl, taskA) != null && model.getBpmnModel().getDirectedEdge(firstEl, taskB) != null);
+    }
+
+    private boolean isSafe2RemJn(FlowNode firstEl, FlowNode taskA, FlowNode taskB) {
+        return (model.getBpmnModel().getDirectedEdge(taskA, firstEl) != null && model.getBpmnModel().getDirectedEdge(taskB, firstEl) != null);
     }
 
     private FlowNode getPredEvt(Integer evt1M, Integer evt2M) {
